# kentfamilygene.com

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Caddyfile  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  schema.graphql
.github/workflows/: ci.yml  docker.yml
crates/kent-api/: Cargo.toml
crates/kent-api/src/: import.rs  main.rs
crates/kent-api/src/html_import/: dedup.rs  mod.rs  parse_ancestor.rs  parse_date.rs  parse_document.rs  parse_lineage.rs  parse_participant.rs  persist.rs  types.rs
crates/kent-db/: Cargo.toml
crates/kent-db/src/: admin_note.rs  dna_test.rs  haplogroup.rs  lib.rs  lineage.rs  online_tree.rs  participant.rs  person.rs  place.rs  relationship.rs  search.rs
crates/kent-db/tests/: integration.rs
crates/kent-domain/: Cargo.toml
crates/kent-domain/src/: auth.rs  lib.rs  mutation.rs  privacy.rs  query.rs
crates/kent-domain/src/types/: admin_note.rs  connection.rs  dna_test.rs  enums.rs  haplogroup.rs  lineage.rs  mod.rs  online_tree.rs  participant.rs  person.rs  place.rs  relationships.rs
crates/kent-domain/tests/: privacy_test.rs
frontend/: codegen.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/app/: App.tsx
frontend/src/app/components/: AdminLayout.tsx  AdminNotes.tsx  Dashboard.tsx  Haplogroups.tsx  Lineages.tsx  LoginPage.tsx  ParticipantForm.tsx  Participants.tsx  People.tsx  PersonForm.tsx  Places.tsx  RequireAuth.tsx
frontend/src/lib/: auth.tsx  graphql-client.ts
(+72 files in other folders)
