[workspace]
resolver = "2"
members = [
    "crates/kent-db",
    "crates/kent-domain",
    "crates/kent-api",
]

[workspace.dependencies]
async-graphql = "7.2"
neo4rs = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
