[package]
name = "kent-api"
version = "0.1.0"
edition = "2024"

[dependencies]
kent-db = { path = "../kent-db" }
kent-domain = { path = "../kent-domain" }
async-graphql.workspace = true
async-graphql-axum = "7.2"
axum = "0.8"
axum-extra = { version = "0.12", features = ["typed-header"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
base64 = "0.22"
